deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: big-starz
  labels:
    name: big-starz
    app.kubernetes.io/name: big-starz
    app.kubernetes.io/part-of: big-starz-casting-app
