deployment/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: big-starz
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
